--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,4 +3,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+    <servlet>
+        <servlet-name>ServletMWC</servlet-name>
+        <servlet-class>psw.servlet.ServletMVC</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ServletMWC</servlet-name>
+        <url-pattern>/mwc</url-pattern>
+    </servlet-mapping>
 </web-app>
